# ChangeLog for dev-java/jta
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jta/ChangeLog,v 1.12 2006/08/03 11:08:35 nelchael Exp $

*jta-1.0.1-r1 (03 Aug 2006)

  03 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org> +jta-1.0.1-r1.ebuild:
  Migrated to generation 2 Java build system.

  14 May 2006; Petteri Räty <betelgeuse@gentoo.org> jta-1.0.1.ebuild:
  Removed (old and only really needed to build tomcat) from DESCRIPTION as
  other packages than Tomcat also need jta.

  18 May 2005; Markus Rothe <corsair@gentoo.org> jta-1.0.1.ebuild:
  Stable on ppc64

  12 May 2005; Jan Brinkmann <luckyduck@gentoo.org> jta-1.0.1.ebuild:
  stable on ppc

  26 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org> jta-1.0.1.ebuild:
  Stable on sparc

  13 Mar 2005; Markus Rothe <corsair@gentoo.org> jta-1.0.1.ebuild:
  Added ~ppc64 to KEYWORDS

  04 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> jta-1.0.1.ebuild:
  stable on amd64

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org> jta-1.0.1.ebuild:
  keywords ~amd64; closes #67334.

  05 Sep 2004; David Holm <dholm@gentoo.org> jta-1.0.1.ebuild:
  Added to ~ppc.

  31 Aug 2004; Chris Aniszczyk <zx@gentoo.org> jta-1.0.1.ebuild:
  Marking x86

*jta-1.0.1 (16 Jan 2004)

  17 Jan 2004; Adrian Almenar <strider@gentoo.org> jta-1.0.1.ebuild:
  Initial import.  Ebuild submitted by Greg Bowyer <bg115@gre.ac.uk>.
  Made some fixes to the submitted ebuild.