@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jta/jta-1.0.1-r1.ebuild,v 1.1 2006/08/03 11:08:35 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jta/jta-1.0.1-r1.ebuild,v 1.2 2006/10/05 17:56:07 gustavoz Exp $
 
 inherit java-pkg-2
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://java.sun.com/products/jta/"
 SRC_URI="${At}"
 LICENSE="sun-bcla-jta"
 SLOT=0
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE=""
 DEPEND=">=app-arch/unzip-5.50-r1
 	>=virtual/jdk-1.3"
