@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jta
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jta/ChangeLog,v 1.12 2006/08/03 11:08:35 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jta/ChangeLog,v 1.13 2006/10/05 17:56:07 gustavoz Exp $
+
+  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> jta-1.0.1.ebuild,
+  jta-1.0.1-r1.ebuild:
+  Dropping sparc keywords, see #96229
 
 *jta-1.0.1-r1 (03 Aug 2006)
 
